--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 	<tr>
             <td>John D Mcgurks</td>
-            <td>Live music and </td>
+            <td>Live music and irish themes</td>
             <td>1200 Russell Blvd, St. Louis, MO 63104</td>
             </tr>
 
