--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <h2 class="project-tagline">Get to know the Off-Campus Scene! Check out our list of WUSTL HotSpots that are freshmen-friendly!</h2>
         <p>Below are area bars that allow students 18+ admittance</p>
 	<p><a href="http://alexdgraham.github.io/QAHome/">Return to Welcome Home</a></p>
+	<p><a href="http://alexdgraham.github.io/QAFreshmen/">Return to Freshmen Welcome</a></p>
         <hr>
 
       </section>
